# sandbox-expected

./: .copier-answers.yml  .exemplar_version  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  annotated.html  annotated_dup.js  bad__expected__access_8hpp_source.html  classbeman_1_1expected_1_1bad__expected__access-members.html  classbeman_1_1expected_1_1bad__expected__access.html  classbeman_1_1expected_1_1bad__expected__access_3_01void_01_4-members.html  classbeman_1_1expected_1_1bad__expected__access_3_01void_01_4.html  classbeman_1_1expected_1_1expected-members.html  classbeman_1_1expected_1_1expected.html  classbeman_1_1expected_1_1expected_3_01T_00_01E_01_4-members.html  classbeman_1_1expected_1_1expected_3_01T_00_01E_01_4.html  classbeman_1_1expected_1_1unexpected-members.html  classbeman_1_1expected_1_1unexpected.html  classes.html  config_8hpp_source.html  dir_1edbd6c37dee30af7455265e0137339f.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_94cf5e36d6dc57d8747f5a546f07158a.html  dir_94cf5e36d6dc57d8747f5a546f07158a.js  dir_ba88a56a66e410323a789d9937b75819.html  dir_ba88a56a66e410323a789d9937b75819.js  dir_bf0afafedee0ae41e7a86eb97b24ebd0.html  dir_d44c64559bbebec7f509842c48db8b23.html  expected_8hpp_source.html  files.html  hierarchy.html  hierarchy.js  index.html  lockfile.json  md_docs_conformance_audit.html  md_docs_conformance_fixes_fix1_constraints.html  (+41 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci_tests.yml  codeql.yml  doxygen-gh-pages.yml  ossf-scorecard-analysis.yml  pre-commit-check.yml  pre-commit-update.yml  vcpkg-release.yml
cmake/: gcc-flags.cmake
docs/: Doxyfile  conformance-audit.md  conformance-fixes.tar  optional_references.md
docs/conformance-fixes/: fix1-constraints.md  fix2-trivial-smfs.md  fix3-monadic-constraints.md  fix4-mandates.md  fix5-preconditions-and-minor.md  index.md  instructions.md
docs/plan/: handoff-next.md  handoff.md  index.md  step1-unexpected.md  step10-expected-void-ref-e.md  step2-bad-expected-access.md  step3-expected-primary.md  step4-expected-void.md  step5-expected-primary-monadic.md  step6-expected-void-monadic.md  step7-expected-ref-t.md  step8-expected-ref-e.md  step9-expected-ref-both.md  tests-overview.md  tests-step1.md  tests-step10.md  tests-step2.md  tests-step3.md  tests-step4.md  tests-step5.md  tests-step6.md  tests-step7.md  tests-step8.md  tests-step9.md
docs/standard/: [expected].html  expected.org  expected.txt
examples/: CMakeLists.txt  expected.cpp  todo.cpp
include/beman/expected/: CMakeLists.txt  bad_expected_access.hpp  config.hpp  config_generated.hpp.in  expected.cppm  expected.hpp  todo.hpp  unexpected.hpp
infra/: .beman_submodule
installtest/: CMakeLists.txt  test.cpp
port/: portfile.cmake.in  vcpkg.json.in
search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  classes_1.js  classes_2.js  pages_2.js  pages_5.js  pages_6.js  searchdata.js
tests/beman/expected/: CMakeLists.txt  and_then_not_expected_fail.cpp  and_then_wrong_error_type_fail.cpp  bad_expected_access.test.cpp  expected.test.cpp  expected_bool_value_ctor_from_expected_fail.cpp  expected_constraints.test.cpp  expected_e_ref_fail.cpp  expected_emplace_throwing_fail.cpp  expected_hardened.test.cpp  expected_monadic.test.cpp  expected_monadic_constraints.test.cpp  expected_ref.test.cpp  expected_ref_and_then_wrong_error_type_fail.cpp  expected_ref_both.test.cpp  expected_ref_both_and_then_wrong_error_type_fail.cpp  expected_ref_both_assign_unexpected_fail.cpp  expected_ref_both_construct_from_unexpected_fail.cpp  expected_ref_both_e_array_fail.cpp  expected_ref_both_inplace_value_fail.cpp  expected_ref_both_no_default_fail.cpp  expected_ref_both_or_else_wrong_value_type_fail.cpp  expected_ref_both_t_array_fail.cpp  expected_ref_both_t_inplace_fail.cpp  expected_ref_both_t_unexpect_fail.cpp  expected_ref_both_t_unexpected_fail.cpp  expected_ref_both_temporary_err_fail.cpp  expected_ref_both_temporary_val_fail.cpp  expected_ref_both_transform_error_ref_result_fail.cpp  expected_ref_constraints.test.cpp  expected_ref_e.test.cpp  expected_ref_e_and_then_wrong_error_type_fail.cpp  expected_ref_e_array_fail.cpp  expected_ref_e_assign_unexpected_fail.cpp  expected_ref_e_const_lvalue_fail.cpp  expected_ref_e_construct_from_unexpected_fail.cpp  expected_ref_e_cv_fail.cpp  expected_ref_e_e_array_fail.cpp  expected_ref_e_or_else_wrong_value_type_fail.cpp  expected_ref_e_ref_fail.cpp  (+33 more)
