[project]
name = "beman-expected"
version = "0.1.0"
description = "An implementation of std::expected"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "cmake==4.3.0",
    "clang-format==22.1.3",
    "gcovr>=7.2",
    "pre-commit>=3.7.1",
]

[tool.codespell]
ignore-words-list = 'unexpect'
