# tests/beman/expected/CMakeLists.txt                               -*-cmake-*-
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

add_executable(beman.expected.tests.expected)
target_sources(
    beman.expected.tests.expected
    PRIVATE
        bad_expected_access.test.cpp
        unexpected.test.cpp
        expected.test.cpp
        expected_void.test.cpp
        expected_monadic.test.cpp
        expected_void_monadic.test.cpp
        expected_constraints.test.cpp
        expected_trivial.test.cpp
        expected_monadic_constraints.test.cpp
        expected_ref.test.cpp
        expected_ref_constraints.test.cpp
        expected_ref_e.test.cpp
        expected_ref_both.test.cpp
        todo.test.cpp
)
target_link_libraries(
    beman.expected.tests.expected
    PRIVATE beman::expected Catch2::Catch2WithMain
)

include(Catch)
catch_discover_tests(beman.expected.tests.expected)

# =============================================================================
# Negative compile tests (WILL_FAIL = compile failure is the expected outcome)
# =============================================================================

# Helper macro: negative compile test that must fail with a specific diagnostic.
# The 'reason' is a regex matched against compiler output — confirms the failure
# is the intended static_assert / constraint, not an unrelated build error.
macro(add_fail_test name source reason)
    add_library(beman.expected.tests.${name} OBJECT)
    target_sources(beman.expected.tests.${name} PRIVATE ${source})
    target_link_libraries(beman.expected.tests.${name} PRIVATE beman::expected)
    set_target_properties(
        beman.expected.tests.${name}
        PROPERTIES EXCLUDE_FROM_ALL true EXCLUDE_FROM_DEFAULT_BUILD true
    )
    add_test(
        NAME ${name}
        COMMAND
            ${CMAKE_COMMAND} --build "${CMAKE_BINARY_DIR}" --target
            beman.expected.tests.${name} --config $<CONFIGURATION>
    )
    set_tests_properties(${name} PROPERTIES PASS_REGULAR_EXPRESSION "${reason}")
endmacro()

# Step 1 — unexpected<E> ill-formed instantiations [expected.un.general]
add_fail_test(unexpected_array_fail unexpected_array_fail.cpp
    "E must not be an array type"
)
add_fail_test(unexpected_cvref_fail unexpected_cvref_fail.cpp
    "E must not be cv-qualified"
)
add_fail_test(unexpected_self_fail  unexpected_self_fail.cpp
    "E must not be a specialization of unexpected"
)

# Step 3 — expected<T,E> ill-formed T/E [expected.object.general]
add_fail_test(expected_t_ref_fail   expected_t_ref_fail.cpp
    "delete"
)
# Note: expected_e_ref_fail removed — expected<int, int&> is now valid via expected<T,E&>
add_fail_test(expected_t_array_fail expected_t_array_fail.cpp
    "T must not be an array type"
)

# Step 3 — expected<T,E> emplace Mandates: nothrow_constructible_v<T,Args...>
add_fail_test(expected_emplace_throwing_fail expected_emplace_throwing_fail.cpp
    "is_nothrow_constructible"
)

# Step 4 — expected<void,E> ill-formed E [expected.void.general]
add_fail_test(expected_void_ref_fail   expected_void_ref_fail.cpp
    "T must not be void"
)
add_fail_test(expected_void_array_fail expected_void_array_fail.cpp
    "E must not be an array type"
)

# Step 5 — monadic Mandates [expected.object.monadic]
add_fail_test(and_then_wrong_error_type_fail    and_then_wrong_error_type_fail.cpp
    "F must return expected with the same error_type"
)
add_fail_test(and_then_not_expected_fail        and_then_not_expected_fail.cpp
    "F must return a specialization of expected"
)
add_fail_test(or_else_wrong_value_type_fail     or_else_wrong_value_type_fail.cpp
    "F must return expected with the same value_type"
)
add_fail_test(transform_error_ref_result_fail   transform_error_ref_result_fail.cpp
    "G must be an object type"
)

# Step 6 — void monadic Mandates [expected.void.monadic]
add_fail_test(void_and_then_wrong_error_type_fail void_and_then_wrong_error_type_fail.cpp
    "F must return expected with the same error_type"
)
add_fail_test(void_or_else_wrong_value_type_fail  void_or_else_wrong_value_type_fail.cpp
    "F must return expected with the same value_type"
)

# Fix 1 — constraint 23.6: value ctor blocked for T=bool, U=expected specialization
add_fail_test(expected_bool_value_ctor_from_expected_fail expected_bool_value_ctor_from_expected_fail.cpp
    "no matching function"
)

# Fix 4 — Mandates: T must not be a specialization of unexpected
add_fail_test(expected_unexpected_value_type_fail expected_unexpected_value_type_fail.cpp
    "T must not be a specialization of unexpected"
)

# Step 7 — expected<T&, E> reference specialization: constructor constraints
add_fail_test(expected_ref_temporary_fail     expected_ref_temporary_fail.cpp
    "no matching function|delete"
)
add_fail_test(expected_ref_no_default_fail    expected_ref_no_default_fail.cpp
    "delete"
)
add_fail_test(expected_ref_inplace_value_fail expected_ref_inplace_value_fail.cpp
    "no matching function"
)

# Step 8 — expected<T, E&> reference error: dangling prevention
add_fail_test(expected_ref_e_temporary_error_fail expected_ref_e_temporary_error_fail.cpp
    "delete|no matching function"
)
add_fail_test(expected_ref_e_const_lvalue_fail expected_ref_e_const_lvalue_fail.cpp
    "no matching function|cannot bind"
)

# Step 8 — expected<T, E&>: no constructor or assignment from unexpected<G>
# (would bind E& to storage inside the temporary unexpected — dangling)
add_fail_test(expected_ref_e_construct_from_unexpected_fail
    expected_ref_e_construct_from_unexpected_fail.cpp
    "conversion from|no matching function"
)
add_fail_test(expected_ref_e_assign_unexpected_fail
    expected_ref_e_assign_unexpected_fail.cpp
    "no match for|no matching function"
)

# Step 7/8 parity — expected<T&,E> or_else value_type mandate (added in Step 8 review)
add_fail_test(expected_ref_or_else_wrong_value_type_fail expected_ref_or_else_wrong_value_type_fail.cpp
    "F must return expected with the same value_type"
)

# Step 9 — expected<T&, E&> dangling prevention and no-default constraint
add_fail_test(expected_ref_both_temporary_val_fail expected_ref_both_temporary_val_fail.cpp
    "delete|no matching function"
)
add_fail_test(expected_ref_both_temporary_err_fail expected_ref_both_temporary_err_fail.cpp
    "delete|no matching function"
)
add_fail_test(expected_ref_both_no_default_fail expected_ref_both_no_default_fail.cpp
    "delete|no matching function"
)

# Step 9 — expected<T&, E&>: no constructor or assignment from unexpected<G>
# (would bind E& to storage inside the temporary unexpected — dangling)
add_fail_test(expected_ref_both_construct_from_unexpected_fail
    expected_ref_both_construct_from_unexpected_fail.cpp
    "conversion from|no matching function"
)
add_fail_test(expected_ref_both_assign_unexpected_fail
    expected_ref_both_assign_unexpected_fail.cpp
    "no match for|no matching function"
)

# Step 9 — expected<T&, E&>: or_else value_type mandate
add_fail_test(expected_ref_both_or_else_wrong_value_type_fail
    expected_ref_both_or_else_wrong_value_type_fail.cpp
    "F must return expected with the same value_type"
)

# Step 7 — expected<T&, E> Mandates: E constraints
add_fail_test(expected_ref_e_ref_fail   expected_ref_e_ref_fail.cpp
    "ambiguous|E must not be a reference"
)
add_fail_test(expected_ref_e_void_fail  expected_ref_e_void_fail.cpp
    "E must not be void"
)
add_fail_test(expected_ref_e_array_fail expected_ref_e_array_fail.cpp
    "E must not be an array type"
)
add_fail_test(expected_ref_e_cv_fail    expected_ref_e_cv_fail.cpp
    "E must not be cv-qualified"
)

# =============================================================================
# Hardened precondition tests (compiled with -DBEMAN_EXPECTED_HARDENED)
# =============================================================================

add_executable(beman.expected.tests.hardened)
target_sources(beman.expected.tests.hardened PRIVATE expected_hardened.test.cpp)
target_link_libraries(
    beman.expected.tests.hardened
    PRIVATE beman::expected Catch2::Catch2WithMain
)
target_compile_definitions(
    beman.expected.tests.hardened
    PRIVATE BEMAN_EXPECTED_HARDENED
)
catch_discover_tests(beman.expected.tests.hardened)
